Inicio dos ajustes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<div class="menu text-center">
+  <div class="button-container">
+    <div class="arrow-down"></div>
+    <a>
+      Home
+    </a>
+  </div>
+</div>
+
 <router-outlet></router-outlet>
