--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="row">
+  <div class="bg-wrap">
+    <video autoplay="autoplay" loop="loop" preload="auto" muted="muted">
+      <source src="../../assets/videos/bg-video-1.mp4" type="video/mp4">
+      Video not supported
+    </video>
+  </div>
+  <div class="content dotted">
+    <img src="../../assets/images/logo.png" alt="logo" class="logo">
+  </div>
+</div>
